--- a/ChangeLog
+++ b/ChangeLog
@@ -39,4 +39,13 @@ Fejlesztői dokumentáció elkezdése - Hivatkozásokat majd a végén megcsiná
 1. - Bevezetés megírása
 
 
+--05.30.--
+--Javítás--
+
+Visszaírva tojás alakúra
+2.3.1 képek és szöveg elrendezésének javítása
+
+
+
+
 
